--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,23 @@
 
 /* Your CSS Code here. */
+.holder{
+	display:flex;
+	justify-content: space-between;
+	align-items:center;
+	flex-wrap:wrap;
+}
+
+.item{
+	width:100px;
+	height:100px;
+	font-size:50px;
+}
+.item-1{
+	background-color:green;	
+}
+.item-2{
+	background-color:red;	
+}
+.item-3{
+	background-color:blue;	
+}
